; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_conf.c_conf_pool_name_cmp.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_conf.c_conf_pool_name_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conf_pool = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @conf_pool_name_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @conf_pool_name_cmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.conf_pool*, align 8
  %6 = alloca %struct.conf_pool*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.conf_pool*
  store %struct.conf_pool* %8, %struct.conf_pool** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.conf_pool*
  store %struct.conf_pool* %10, %struct.conf_pool** %6, align 8
  %11 = load %struct.conf_pool*, %struct.conf_pool** %5, align 8
  %12 = getelementptr inbounds %struct.conf_pool, %struct.conf_pool* %11, i32 0, i32 0
  %13 = load %struct.conf_pool*, %struct.conf_pool** %6, align 8
  %14 = getelementptr inbounds %struct.conf_pool, %struct.conf_pool* %13, i32 0, i32 0
  %15 = call i32 @string_compare(i32* %12, i32* %14)
  ret i32 %15
}

declare dso_local i32 @string_compare(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
